@@ -35,6 +35,11 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ======== IMPORTANT: rename this, and add a new "future" section, BEFORE ========
 ======== making a new DFHack release!                                   ========
 ================================================================================
+# Future
+
+## Misc Improvements
+- `getplants`: added switches for designations for farming seeds and for max number designated per plant
+
 # 0.44.12-r3
 
 ## New Plugins
